2002-12-31  Ulrich Drepper  <drepper@redhat.com>

	* libio/libioP.h: Add libc_hidden_proto for _IO_iter_begin,
	_IO_iter_end, _IO_iter_next, and _IO_iter_file.
	* libio/genops.c: Add libc_hidden_def for _IO_iter_begin,
	_IO_iter_end, _IO_iter_next, and _IO_iter_file.

	* include/setjmp.h: Add libc_hidden_proto for __libc_longjmp.
	* sysdeps/generic/longjmp.c: Add libc_hidden_def for __longjmp.
	* sysdeps/unix/sysv/linux/sparc/sparc64/longjmp.S: Add
	__GI___longjmp alias.

	* include/setjmp.h: Add libc_hidden_proto for _setjmp.
	* sysdeps/alpha/setjmp.S: Add __GI__setjmp alias.
	* sysdeps/arm/bsd-_setjmp.S: Likewise.
	* sysdeps/generic/bsd-_setjmp.c: Likewise.
	* sysdeps/hppa/bsd-_setjmp.S: Likewise.
	* sysdeps/i386/bsd-_setjmp.S: Likewise.
	* sysdeps/m68k/bsd-_setjmp.c: Likewise.
	* sysdeps/mips/bsd-_setjmp.S: Likewise.
	* sysdeps/mips/mips64/bsd-_setjmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/bsd-_setjmp.S: Likewise.
	* sysdeps/powerpc/powerpc64/setjmp.S: Likewise.
	* sysdeps/s390/s390-32/bsd-_setjmp.S: Likewise.
	* sysdeps/s390/s390-32/elf/setjmp.S: Likewise.
	* sysdeps/s390/s390-64/bsd-_setjmp.S: Likewise.
	* sysdeps/s390/s390-64/elf/setjmp.S: Likewise.
	* sysdeps/sh/bsd-_setjmp.S: Likewise.
	* sysdeps/sparc/sparc32/setjmp.S: Likewise.
	* sysdeps/unix/sysv/linux/ia64/setjmp.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/setjmp.S: Likewise.
	* sysdeps/vax/bsd-_setjmp.S: Likewise.
	* sysdeps/x86_64/bsd-_setjmp.S: Likewise.

2002-12-30  Ulrich Drepper  <drepper@redhat.com>

	* malloc/thread-m.h (thread_atfork): Define using __register_atfork.

2002-12-30  Roland McGrath  <roland@redhat.com>

	* Rules (generated): Target removed.
	* mach/Makefile (generated): Define it here instead.

	* math/Makefile (generated): Add m_*l and m_*f variants too.

2002-12-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close): Handle relocation dependencies among
	the to-be-deleted objects right away instead of later separately.